<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="title">Netology. University of internet-professions of the future</string>
    <string name="hellotext">Hello, this is the new Netology! \n\n\nWelcome! → http://netolo.gy/fyb</string>
    <string name="icon" translatable="false">icon</string>
    <string name="published">date and time</string>
    <string name="menu" translatable="false">menu</string>
    <string name="likes" translatable="false">likes</string>
    <string name="shares" translatable="false">shares</string>
    <string name="views" translatable="false">views</string>

    <string name="menu_add">Add post</string>
    <string name="menu_edit">Edit post</string>
    <string name="menu_remove">Remove post</string>
    <string name="menu_reload">Reload</string>
    <string name="post_text">Post text</string>
    <string name="description_save">Save</string>
    <string name="description_cancel">Cancel</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="Id" translatable="false">ID:</string>
    <string name="postId" translatable="false">postId</string>

    <string name="play_video">PLAY</string>
    <string name="chooser_share_post">Share post</string>
    <string name="type_here">Type text here</string>

    <string name="google_play_unavailable">Google Api unavailable</string>
    <string name="notification_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_newpost">User %1$s wrote new post</string>
    <string name="remote_channel_name">Server notifications</string>
    <string name="remote_channel_description">Notifications from remote server</string>
    <string name="mark_as_read">"Mark as read</string>
    <string name="open_messager">Open in messager</string>

    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">No posts. Create a new post, it will appear here</string>

    <string name="action_success">Succesfully.</string>
    <string name="action_non_success">Something went wrong.</string>

    <string name="server_error">Server error. Try again?</string>
    <string name="buttonCancel">Cancel</string>

</resources>
