<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toStartOf="@+id/author"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@+id/buttonMenu"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@+id/icon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMenu"
        style="@style/Widget.AppTheme.SimpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/author"
        app:layout_constraintTop_toTopOf="@+id/icon"
        app:layout_constraintVertical_bias="0.687"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="icon,author,published,buttonMenu"
        app:layout_constraintTop_toBottomOf="@id/published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autoLink="web"
        android:text="@string/hellotext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        tools:layout_editor_absoluteY="232dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibLikes"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:checkable="true"
        app:layout_constraintEnd_toStartOf="@+id/ibShares"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:icon="@drawable/ic_like_24dp"
        tools:text="likes"
        style="@style/Widget.AppTheme.LikeButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibShares"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ivViews"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/ibLikes"
        app:layout_constraintTop_toTopOf="@+id/ibLikes"
        app:layout_constraintBottom_toBottomOf="@+id/ibLikes"
        app:icon="@drawable/ic_baseline_share_24"
        tools:text="shares"
        style="@style/Widget.AppTheme.SimpleButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvPostId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postId"
        app:layout_constraintBottom_toBottomOf="@+id/ibShares"
        app:layout_constraintEnd_toStartOf="@id/ibVideo"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ibShares"
        app:layout_constraintTop_toTopOf="@+id/ibShares"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/Widget.AppTheme.SimpleButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibVideo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ivViews"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvPostId"
        app:layout_constraintTop_toTopOf="@+id/ibLikes"
        app:layout_constraintBottom_toBottomOf="@+id/ibLikes"
        app:icon="@drawable/ic_video_24"
        android:text="@string/play_video"
        style="@style/Widget.AppTheme.SimpleButton" />

    <ImageView
        android:id="@+id/ivViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/views"
        app:layout_constraintEnd_toStartOf="@+id/tvViews"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ibShares"
        app:layout_constraintBottom_toBottomOf="@id/ibShares"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    <TextView
        android:id="@+id/tvViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/views"
        app:layout_constraintBottom_toBottomOf="@+id/ivViews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/ivViews"
        app:layout_constraintTop_toTopOf="@+id/ivViews" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/ibShares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
